commit 1.4. pridana template tabulky

--- a/Diplomka/Diploma/DP_UHR0019/DP_UHR0019.tex
+++ b/Diplomka/Diploma/DP_UHR0019/DP_UHR0019.tex
@@ -648,6 +648,21 @@ Rozdiel medzi prísupom rôznych štúdií a mojím prístupom pri konšrukcii g
 - dopisat implementaciu grafu + vrcholov + triedny diagram
 
 \section{Experimenty}
+
+ 
+\begin{table}[h!]
+\centering
+
+\begin{tabular}{ c c c }
+  &  počet \\ 
+ \hline
+ Emaily  & cell6 \\  
+ Konverzácie  & cell9  \\
+ Požívatelia (emailové adresy)  & cell9 \\
+\end{tabular}
+\caption{Detaily datasetu}
+\end{table}
+
 - experiment pre celu agregovanu siet
 - tabulka: pocet emailov, pocet konverzacii, pocet emailovych adries
 - tabulka: pouzivatelia, ktory su aspon v jednej konverzacii, emaily poslane z emailu korporacie, konverzacie  ktorych aspon jeden user je z korporatu, konverzacie iniciovane niekym z korporatu
@@ -660,6 +675,21 @@ Rozdiel medzi prísupom rôznych štúdií a mojím prístupom pri konšrukcii g
 	- porovnanie toho, ci sa rola zmenila pocas kazdeho roku straveneho vo firme
 	
 	
+ 
+\begin{table}[h!]
+\centering
+
+\begin{tabular}{ c c c }
+  &  počet \\ 
+ \hline
+ Emaily  & cell6 \\  
+ Konverzácie  & cell9  \\
+ Požívatelia (emailové adresy)  & cell9 \\
+\end{tabular}
+\caption{Detaily datasetu}
+\end{table}
+
+
 \section{Záver}
 \subsection{Možnosti rozšírenia a zdokonalenia práce}
 
