commit 2.4.2018 textova cast + groups

--- a/Diplomka/Diploma/DP_UHR0019/DP_UHR0019.tex
+++ b/Diplomka/Diploma/DP_UHR0019/DP_UHR0019.tex
@@ -670,17 +670,15 @@ Pri práci som využila svoju emailovú sadu a tiež emailové sady, ktoré mi p
 \subsection{Analýza tímu}
 Náš tím pozostáva zo štyroch ľudí, o ktorých bližšie informácie, ktoré môžu pomôcť pri analýze rolí a komunít, sú v nasledujúcej tabuľke.
 
-\textit{Pozn.: Neuvádzam mená, pre rozpoznávanie osôb pouívam pozíciu, na ktorej daný človek pracuje.}
-
 \begin{table}[h!]
 \centering
 \begin{tabular}{ c c c }
- Pozícia &  Dátum nástupu do firmy \\ 
+ Meno & Pozícia &  Dátum nástupu do firmy \\ 
  \hline
- Test engineer  & 1.7.2011 \\  
- Junior Developer  & 1.9.2016  \\
- Medior Developer  & 1.6.2017 \\
- Lead Developer & 1.11.2010 \\
+ Andrej Parimucha &Test engineer  & 1.7.2011 \\  
+ Veronika Uhrová & Junior Developer  & 1.9.2016  \\
+ Andrej Matejčík & Medior Developer  & 1.6.2017 \\
+ Tibor Palatka & Lead Developer & 1.11.2010 \\
 \end{tabular}
 \caption{Informácie o členoch týmu}
 \end{table} 
@@ -713,15 +711,75 @@ Náš tím pozostáva zo štyroch ľudí, o ktorých bližšie informácie, ktor
 
 
 \subsubsection{Zmeny komunít v čase}
+Celkový časový rozdah všetkých konverzácií je od 18. Novembra 2010 do 1. Decembra 2017. Za túto dobu sa v rámci týmu vyvorilo celkovo 13 komunít. 
+
+
+Časový rozsah, ktorý som volila neskôr bol po jednom roku a sledovala som koľko komunít sa v tomto roku nachádzalo a či nejaká komunita pribudla. V nasledujúcej tabuľke je zobrazený časový interval a počet komunít nachádzajúcich sa v sieti za tento časový interval.
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{ c c c }
+ Časový interval &  Počet komunít \\ 
+ \hline
+ 18.11.2010 - 31.12.2010  & 1 \\  
+ 01.01.2011 - 31.12.2011  & 4 \\  
+ 01.01.2012 - 31.12.2012  & 5 \\ 
+ 01.01.2013 - 31.12.2013  & 4 \\  
+ 01.01.2014 - 31.12.2014  & 9 \\ 
+ 01.01.2015 - 31.12.2015  & 7 \\ 
+ 01.01.2016 - 31.12.2016  & 13 \\ 
+ 01.01.2017 - 01.12.2017  & 9 \\ 
+\end{tabular}
+\caption{Počet komunít v ročných intervaloch}
+\end{table}
+
+Táto tabuľka ukazuje nárast komunít v rámci každého roka. Najväčší rast komunít je medzi rokom 2015 a 2016, čo odzrkadľuje reálnu situáciu, keďže firmu na prelome týchto rokov kúpil korporát, takže sa najviac naberali ľudia, čiže nárast emailov a komunít je prirodzený. V ďalšom roku sa situácia konsolidovala takže nastal menší pokles komunít.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=16cm,height=11cm]{figures/teamanalyze_allcommunities}
+\caption{Vizualizácia grafu emailov s vygenerovanými komunitami celého týmu za celkový čas}
+\end{figure}
+
+
+
 \subsubsection{Zmeny rôl v čase}
+Tak ako sa menia v čase komunity, tak sa určite menia aj roly, ktoré sa vyskytujú v tíme a tiež sa menia ľudia, ktoré tieto roly zastupujú. Pre analýzu rôl som použila ročné intervaly, ktoré pridávam k počiatku všetkých konverzácií.
 
+\begin{table}[h!]
+\centering
+\begin{tabular}{ c c c c c c}
+ Časový interval &  Leader & Mediator & Outsider & Outermost & Počet komunít\\ 
+ \hline
+ 18.11.2010 - 31.12.2010 & 0 & 1 & 0 & 0 & 1\\  
+ 18.11.2010 - 31.12.2011 & 0 & 1 & 0 & 0 & 4\\  
+ 18.11.2010 - 31.12.2012 & 3 & 1 & 1 & 1 & 5\\  
+ 18.11.2010 - 31.12.2013 & 4 & 0 & 0 & 0 & 4\\    
+ 18.11.2010 - 31.12.2014 & 4 & 3 & 0 & 0 & 8\\   
+ 18.11.2010 - 31.12.2015 & 4 & 3 & 0 & 0 & 8\\   
+ 18.11.2010 - 31.12.2016 & 7 & 4 & 0 & 0 & 13\\   
+ 18.11.2010 - 01.12.2017 & 8 & 3 & 0 & 2 & 13\\   
+\end{tabular}
+\caption{Počet komunít v ročných intervaloch}
+\end{table}
 
-- tabulka poctu komunit s meniacim sa casom
-
-- tabulka poctu leadrov s meniacim sa casom
+\begin{figure}[H]
+\centering
+\includegraphics[width=16cm,height=11cm]{figures/teamanalyze_mediatorexample}
+\caption{Vizualizácia grafu v intervale 18.11.2010 - 31.12.2011}
+\label{teamanalyze_mediatorexample}
+\end{figure}
 	
+Na obrázku \ref{teamanalyze_mediatorexample} vidieť pekný príklad roly \textit{Mediator} (uzol \textit{Tibor Palatka}). V tomto prípade uzol, ktorý je označený ako \textit{Mediator}, spája všetky komunity grafu.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=16cm,height=11cm]{figures/teamanalyze_eachcomleader}
+\caption{Vizualizácia grafu v intervale 18.11.2010 - 31.12.2013, v každej komunie detekovaný jeden leader.}
+\end{figure}
 
 
+\newpage
 \subsection{Analýza jednodlivca}
 
 Ako jednotlivca, ktorého budem analyzovať som si vybrala \textit{lead developera}, pretože je vo firme najdlhšie a tým pádom sa budú dobre rozoznávať či už zmeny v komunitách alebo rolách.
